fast derivation algorithm